--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
                 <div class="feature-card">
                     <i class="fas fa-comments"></i>
                 </div>
+                <div>
+                    <h3>Live Chat</h3>
+                        <p>Get instant support</p>
+                    </div>
                 <div class="feature-card">
                     <i class="fas fa-book-open"></i>
                     <div>
