--- a/dashboard.html
+++ b/dashboard.html
@@ -42,10 +42,9 @@
                         <i class="fas fa-users" style="color: #3b82f6;"></i>
                         <span>Active Chats</span>
                     </div>
-                    <div class="stat-value" id="activeChats">12</div>
+                    <div class="stat-value" id="activeChats"></div>
                     <div class="stat-change">
                         <i class="fas fa-trending-up"></i>
-                        +12% from last month
                     </div>
                 </div>
 
@@ -54,10 +53,9 @@
                         <i class="fas fa-book-open" style="color: #10b981;"></i>
                         <span>Repair Guides</span>
                     </div>
-                    <div class="stat-value">24</div>
+                    <div class="stat-value"></div>
                     <div class="stat-change">
                         <i class="fas fa-trending-up"></i>
-                        +18% from last month
                     </div>
                 </div>
 
@@ -66,10 +64,9 @@
                         <i class="fas fa-box" style="color: #8b5cf6;"></i>
                         <span>Parts Available</span>
                     </div>
-                    <div class="stat-value">156</div>
+                    <div class="stat-value"></div>
                     <div class="stat-change">
                         <i class="fas fa-trending-up"></i>
-                        +8% from last month
                     </div>
                 </div>
             </div>
